fix(dsl,generator): REG-175/REG-178 -- complete Map.copyOf/Set.copyOf determinism audit and fix
REG-146 fixed two Map.copyOf call sites that discarded a LinkedHashMap's
insertion order (java.util.ImmutableCollections deliberately randomizes
iteration order per JVM run -- JEP 269's hash-flood mitigation), which
had leaked into generated Workbench UI text. REG-175 filed the ~77
remaining Map.copyOf/Set.copyOf sites across NPDevContract/dsl and
NPDevGenerator/generator as unaudited candidates for the same defect
shape.

Full site-by-site audit (3 parallel research passes): 79 sites total. 60
are SAFE -- most DSL Compiled* fields (metadata/explainability/params/
etc.) are routed through ModelCompiler.sortObjectMap() and
CompiledModelCanonicalJson.toObjectMap()'s TreeMap re-sort before ever
reaching JSON, silently absorbing the randomization; the rest are only
ever read via keyed .get() lookups where order is unobservable, or
explicitly sorted before their consumer emits them.

19 sites are AFFECTED -- real instances of REG-146's defect shape, all
sharing the same root cause: they bypass every safety net (a raw
entrySet()/Map.copyOf copy reaching serialized/emitted output with no
sort anywhere in the chain). Fixed all 19, split across two items since 7
turned out to be a materially different bug class:

REG-175 (12 sites, generation-time determinism -- this item's original
scope): AutoPanelSurfaceAst.regions/visibleWhen/bandPickers/uiState and
SelectorAst.returnMapping (dsl/ast), CompiledAutoPanelSurface's four
sibling fields and RenameResolution.Result.explainedRenames
(dsl/compiled, dsl/schemaevolution), and AuthoringMergeGate.MergeResult's
two element sets (generator/authoring). visibleWhen is proven, not just
theoretical -- dsl-conformance-max's model.json already declares 2 real
keys for one surface, producing observably different compiled-model.json
bytes across generations before this fix.

REG-178 (7 sites, new item -- a live generated-app runtime bug, not a
gene